quick fix to .post-content to force line breaks in the event that someone doesn't understand how to use twitter

--- a/public/css/swatsocial.css
+++ b/public/css/swatsocial.css
@@ -232,6 +232,7 @@ border-bottom-right-radius: 8px;
 .post_content
 { 
 	font-size:75%;
+	overflow-wrap: break-word;
 }
 
 .instagram .post_content img
